[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.8.0"
actix-web = "4.3.0"
actix-web-actors = "4.2.0"
chrono = "0.4.23"
cron = "0.12.0"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.7.0"
